<resources>
    <string name="app_name">졸업할수있을까</string>
    <string name="basic">기초교양</string>
    <string name="majorsearch">전공탐색</string>
    <string name="wholeculture">전인교양</string>
    <string name="jnu">JNU</string>
    <string name="majordetail">필수전공</string>
    <string name="kakaotrack">카카오트랙</string>
    <string name="back">뒤로가기</string>
    <string name="graduationpoint">졸업학점</string>
    <string name="majorpoint">전공학점</string>
    <string name="toeic">토익점수</string>
    <string name="license">시험/자격증</string>
    <string name="kakao2">카카오트랙 2</string>
    <string name="file">화일처리 및 응용</string>
    <string name="opensource">오픈소스개발방법론</string>
    <string name="datastructure">자료구조</string>
    <string name="math">이산수학</string>
    <string name="exist">X</string>
    <string name="database">데이터베이스</string>
    <string name="advancedweb">고급웹 개발론</string>
    <string name="os">운영체제 및 설계</string>
    <string name="algo">알고리즘설계 및 분석</string>
    <string name="objectprog">객체지향프로그래밍</string>
    <string name="kakao3">카카오트랙3</string>
    <string name="basicweb">기초웹개발론</string>
    <string name="kako3">카카오트랙3</string>
    <string name="kakao4">카카오트랙 4</string>
    <string name="portal">포털서비스개발론</string>
    <string name="training">현장실습</string>
    <string name="intern">인턴쉽</string>
    <string name="informationCommunication">정보통신</string>
    <string name="swcapston1">SW융합캡스톤디자인1</string>
    <string name="swcapstion2">SW융합캡스톤디자인2</string>
    <string name="swcapston3">SW융합캡스톤디자인3</string>
    <string name="necessarysubject">필수이수과목</string>
    <string name="social">사회계열</string>
    <string name="humanities">인문계열</string>
    <string name="naturalsciences">자연과학계열</string>
    <string name="engineering">공학계열</string>
    <string name="detail">소속계열 6학점 이상, 2개분야 이수</string>
    <string name="society">사회와 문화</string>
    <string name="history">역사와 철학</string>
    <string name="language">언어와 문학</string>
    <string name="science">과학과 기술</string>
    <string name="art">예술과 건강</string>
    <string name="tenacity">인성과 융복합사고</string>
    <string name="info">4분야 이상, 5개과목 이수</string>
    <string name="english">외국어</string>
    <string name="write">글쓰기</string>
    <string name="englishnecessary">2과목이수(필수)</string>
    <string name="subenglish">1혹은2과목 이수</string>
    <string name="logic">논리적 사고</string>
    <string name="detailinfo">외국어 2과목 필수 이수</string>
    <string name="gotoactivity">goToActivity</string>
    <string name="go">go</string>
    <string name="dbtest">DBTEST</string>
    <string name="textview">TextView</string>
    <string name="testinfo">
        시험/자격증 INFO\n\n
        - 졸업 종합 시험\n
        - 전시회 졸업작품 제출\n
        - 전산관련 자격증 2개 이상\n
        - 공모전 수상/학술대회 참가
    </string>
    <string name="username">name</string>
    <string name="usermajor">major</string>
>>>>>>> upstream/master
</resources>
