<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/title">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/exist"
            android:onClick="onClick"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            android:layout_marginStart="290dp" />

        <TextView
            android:id="@+id/detail_majorsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wholeculture"
            android:textColor="@color/highlight"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <CheckBox
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/language"
                android:textColor="@color/highlight"
                android:textSize="30sp" tools:targetApi="lollipop"
                android:layout_marginStart="40dp" />

            <CheckBox
                android:layout_width="278dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/history"
                android:textColor="@color/highlight"
                android:textSize="30sp" tools:targetApi="lollipop"
                android:layout_marginStart="40dp" />

            <CheckBox
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/society"
                android:textColor="@color/highlight"
                android:textSize="30sp" tools:targetApi="lollipop"
                android:layout_marginStart="40dp" />

            <CheckBox
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/science"
                android:textColor="@color/highlight"
                android:textSize="30sp" tools:targetApi="lollipop"
                android:layout_marginStart="40dp" />

            <CheckBox
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/art"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />

            <CheckBox
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/tenacity"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/basic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/highlight"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/PB전인교양"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp" />
    </LinearLayout>

</LinearLayout>