<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/title">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/exist"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            android:layout_marginStart="290dp" />

        <TextView
            android:id="@+id/detail_majorsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kakao2"
            android:textColor="@color/highlight"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <CheckBox
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/file"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />

            <CheckBox
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/opensource"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />

            <CheckBox
                android:layout_width="281dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/datastructure"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />

            <CheckBox
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/math"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                android:layout_marginStart="40dp" tools:targetApi="lollipop" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>