<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/title">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/B_Back"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/exist"
            android:onClick="onClick"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            android:layout_marginStart="290dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/basic"
            android:textColor="@color/highlight"
            android:textSize="40sp" />

        <CheckBox
            android:id="@+id/writing"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:buttonTint="@color/highlight"
            android:checked="false"
            android:text="@string/write"
            android:textColor="@color/highlight"
            android:textSize="30sp"
            tools:targetApi="lollipop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/foreignfinal"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/english"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="60dp">

                <CheckBox
                    android:id="@+id/foreign2"
                    android:layout_width="258dp"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="@color/highlight"
                    android:checked="false"
                    android:text="@string/englishnecessary"
                    android:textColor="@color/highlight"
                    android:textSize="30sp"
                    tools:targetApi="lollipop" />

                <CheckBox
                    android:id="@+id/foreign"
                    android:layout_width="279dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:buttonTint="@color/highlight"
                    android:checked="false"
                    android:text="@string/subenglish"
                    android:textColor="@color/highlight"
                    android:textSize="30sp"
                    tools:targetApi="lollipop" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/logic"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:buttonTint="@color/highlight"
            android:checked="false"
            android:text="@string/logic"
            android:textColor="@color/highlight"
            android:textSize="30sp"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/basic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/detailinfo"
            android:textColor="@color/highlight"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/PB_basic"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:max="8"
            android:progress="0"/>
    </LinearLayout>




</LinearLayout>