<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:background="@color/title">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/exist"
            android:onClick="onClick"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            android:layout_marginStart="290dp" />

        <TextView
            android:id="@+id/detail_majorsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/majordetail"
            android:textColor="@color/highlight"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <CheckBox
                android:id="@+id/datastructure"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/datastructure"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                tools:targetApi="lollipop" />

            <CheckBox
                android:id="@+id/datacommnuication"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/informationCommunication"
                android:textColor="@color/highlight"
                android:textSize="30sp"
                tools:targetApi="lollipop" />

            <CheckBox
                android:id="@+id/CAPSTONE1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/swcapston1"
                android:textColor="@color/highlight"
                android:textSize="25sp"
                tools:targetApi="lollipop" />

            <CheckBox
                android:id="@+id/CAPSTON2"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/swcapstion2"
                android:textColor="@color/highlight"
                android:textSize="25sp"
                tools:targetApi="lollipop" />

            <CheckBox
                android:id="@+id/CAPSTON3"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:buttonTint="@color/highlight"
                android:checked="false"
                android:text="@string/swcapston3"
                android:textColor="@color/highlight"
                android:textSize="25sp"
                tools:targetApi="lollipop" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/basic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/necessarysubject"
            android:textColor="@color/highlight"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/PB_datastructure"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:max="12"
            android:progress="0"/>
    </LinearLayout>

</LinearLayout>