<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center_horizontal|center_vertical"
android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:background="@color/title"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_기초교양"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/title"
                android:text="@string/basic"
                android:textColor="@color/highlight" />

            <ProgressBar
                android:id="@+id/PB기초교양"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="330dp"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_전공탐색"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/title"
                android:text="@string/majorsearch"
                android:textColor="@color/highlight"/>

            <ProgressBar
                android:id="@+id/PB_전공탐색"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="330dp"
                android:layout_height="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_전인교양"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/title"
                android:text="@string/wholeculture"
                android:textColor="@color/highlight"/>

            <ProgressBar
                android:id="@+id/PB_전인교양"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="330dp"
                android:layout_height="55dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_JNU"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/title"
                android:text="@string/jnu"
                android:textColor="@color/highlight"/>

            <ProgressBar
                android:id="@+id/PB_JNU"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="330dp"
                android:layout_height="55dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/B_필수전공"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@color/title"
                android:text="@string/majordetail"
                android:textColor="@color/highlight"/>

            <ProgressBar
                android:id="@+id/PB_필수전공"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="330dp"
                android:layout_height="55dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/B_back"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/title"
        android:gravity="center"
        android:text="@string/back"
        android:layout_marginStart="30dp" />


</LinearLayout>